// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SummaryPage and request New Ballot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  margin: 1rem;
}

.c5 {
  color: gray;
}

.c1 {
  margin: 1rem 0;
}

.c2 {
  width: 100%;
  max-width: 66ch;
  text-align: left;
  border-bottom: 1px solid lightGrey;
}

.c3 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: none;
}

.c4 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: 1px solid lightGrey;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0;
  }
}

<main
  class="c0"
>
  <div
    class="prose c1"
  >
    <h1>
      Official Ballot
    </h1>
    <p
      class="no-print"
    >
      Please review your ballot. Confirm your votes by selecting the “Print Ballot” button.
    </p>
  </div>
  <table
    class="c2"
  >
    <caption
      class="no-print visually-hidden"
    >
      <p>
        Summary of your votes.
      </p>
    </caption>
    <thead
      class="no-print"
    >
      <tr>
        <th
          class="c3"
          scope="col"
        >
          Contest
        </th>
        <th
          class="c3"
          scope="col"
        >
          Vote
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          class="c4"
        >
          President
           
        </th>
        <td
          class="c4"
        >
          <span
            class="c5"
          >
            no selection
          </span>
           
          <small
            class="no-print"
          >
            <a
              href="/contests/president"
            >
              change
            </a>
          </small>
        </td>
      </tr>
      <tr>
        <th
          class="c4"
        >
          Senator
           
        </th>
        <td
          class="c4"
        >
          <span
            class="c5"
          >
            no selection
          </span>
           
          <small
            class="no-print"
          >
            <a
              href="/contests/senator"
            >
              change
            </a>
          </small>
        </td>
      </tr>
    </tbody>
  </table>
</main>
`;

exports[`renders SummaryPage with votes and cancels request New Ballot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  margin: 1rem;
}

.c1 {
  margin: 1rem 0;
}

.c2 {
  width: 100%;
  max-width: 66ch;
  text-align: left;
  border-bottom: 1px solid lightGrey;
}

.c3 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: none;
}

.c4 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: 1px solid lightGrey;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0;
  }
}

<main
  class="c0"
>
  <div
    class="prose c1"
  >
    <h1>
      Official Ballot
    </h1>
    <p
      class="no-print"
    >
      Please review your ballot. Confirm your votes by selecting the “Print Ballot” button.
    </p>
  </div>
  <table
    class="c2"
  >
    <caption
      class="no-print visually-hidden"
    >
      <p>
        Summary of your votes.
      </p>
    </caption>
    <thead
      class="no-print"
    >
      <tr>
        <th
          class="c3"
          scope="col"
        >
          Contest
        </th>
        <th
          class="c3"
          scope="col"
        >
          Vote
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          class="c4"
        >
          President
           
        </th>
        <td
          class="c4"
        >
          Minnie Mouse
           
          <small
            class="no-print"
          >
            <a
              href="/contests/president"
            >
              change
            </a>
          </small>
        </td>
      </tr>
      <tr>
        <th
          class="c4"
        >
          Senator
           
        </th>
        <td
          class="c4"
        >
          John Smith
           
          <small
            class="no-print"
          >
            <a
              href="/contests/senator"
            >
              change
            </a>
          </small>
        </td>
      </tr>
    </tbody>
  </table>
</main>
`;

exports[`renders SummaryPage with votes and request New Ballot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  margin: 1rem;
}

.c1 {
  margin: 1rem 0;
}

.c2 {
  width: 100%;
  max-width: 66ch;
  text-align: left;
  border-bottom: 1px solid lightGrey;
}

.c3 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: none;
}

.c4 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: 1px solid lightGrey;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0;
  }
}

<main
  class="c0"
>
  <div
    class="prose c1"
  >
    <h1>
      Official Ballot
    </h1>
    <p
      class="no-print"
    >
      Please review your ballot. Confirm your votes by selecting the “Print Ballot” button.
    </p>
  </div>
  <table
    class="c2"
  >
    <caption
      class="no-print visually-hidden"
    >
      <p>
        Summary of your votes.
      </p>
    </caption>
    <thead
      class="no-print"
    >
      <tr>
        <th
          class="c3"
          scope="col"
        >
          Contest
        </th>
        <th
          class="c3"
          scope="col"
        >
          Vote
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          class="c4"
        >
          President
           
        </th>
        <td
          class="c4"
        >
          Minnie Mouse
           
          <small
            class="no-print"
          >
            <a
              href="/contests/president"
            >
              change
            </a>
          </small>
        </td>
      </tr>
      <tr>
        <th
          class="c4"
        >
          Senator
           
        </th>
        <td
          class="c4"
        >
          John Smith
           
          <small
            class="no-print"
          >
            <a
              href="/contests/senator"
            >
              change
            </a>
          </small>
        </td>
      </tr>
    </tbody>
  </table>
</main>
`;
